--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 </div>
 
                 <h1 class="font-extrabold text-xl text-white text-center mb-3">Emergency Service Directory</h1>
-                <p class="font-semibold text-xl text-white mb-3">Government Emergency Services at Your Fingertip - A Project
+                <p class="font-semibold text-xl text-white mb-3">Government Emergency Services at Your Fingertip - A
+                    Project
                     by Government of the People's Republic of Bangladesh</p>
             </div>
 
